# BladeForge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE.md  PKGBUILD  README  README.md  bez.ipynb  compile.bat  install_dep.sh  main.cpp  main.h  packages.txt  plane.ipynb  renderdoc.cap  vcpkg-configuration.json  vcpkg.json
cmake/: FindLAPACK.cmake
include/: BfMain.h  BladeForge.h  BladeForgeBin.h  bfBase.h  bfBuffer.h  bfConsole.h  bfCurves.hpp  bfCurves2.h  bfDescriptor.h  bfDrawObject.h  bfEvent.h  bfExecutionTime.hpp  bfGUI.h  bfHolder.h  bfLayerHandler.h  bfMatrix.hpp  bfPhysicalDevice.h  bfSwapChain.h  bfUniforms.h  bfVariative.hpp  bfVertex.h  bfVertex2.hpp  bfWindow.h  stb_image_write.h
include/base/: BfDescriptorStructs.h  bfAllocator.h  bfBase.h  bfBuffer.h  bfCamera.h  bfDescriptor.h  bfDescriptor2.h  bfDescriptorStructs.h  bfHolder.h  bfPhysicalDevice.h  bfPipeline.h  bfSingle.h  bfSwapChain.h  bfTexture.h  bfUniforms.h  bfVertex2.hpp  bfViewport.h  bfWindow.h
include/draw/: bfDrawObject.h  bfDrawObject2.h  bfDrawObjectBuffer.h  bfDrawObjectDefineType.h  bfDrawObjectManager.h  bfLayerHandler.h  bfLayerKiller.h  bfObjectId.h  bfTypeManager.h
include/geometry/: bfAxis.h  bfBladeBody.h  bfBladeParts.h  bfBladeSection.h  bfBladeSection2.h  bfCascade.h  bfChain.h  bfCirclePack.h  bfConstraints.h  bfCurves.hpp  bfCurves2.h  bfCurves3.h  bfCurves4.h  bfEdge.h  bfHandle.h  bfObjectMath.h
include/interaction/: BfGuiCreateWindow.h  BfGuiLuaInteraction.h  bfConsole.h  bfEvent.h  bfGUI.h  bfGui.h  bfGuiBody.h  bfGuiCamera.h  bfGuiCreateWindow.h  bfGuiCreateWindowBladeBase.h  bfGuiCreateWindowBladeSection.h  bfGuiCreateWindowCircleWithHandles.h  bfGuiCreateWindowContainer.h  bfGuiCreateWindowContainerDefines.h  bfGuiFileDialog.h  bfGuiSmartLayerObserverWindow.h  bfGuiWindow.h
include/other/: BladeForgeBin.h  bfConfigManager.h  bfGreekFont.h  bfMath.hpp  bfMatrix.hpp  bfMatrix2.h  bfStringTables.h  bfTextureLoad.h  bfVariative.hpp  imgui_demo.h  stb_image_write.h
include/other/config_forms/: bfFormGui.h  bfFormSettings.h
include/pipelines/: BfPipelineLine.hpp  BfPipelineTLines.hpp  BfPipelineTriangle.hpp
include/saveas/: bfStep.h  bfYaml.h
py/: fit.ju.py  fit.py
scripts/: guiconfig.lua  test.lua  test0.lua  test3.lua
shaders/: basic.frag  basic.geom  basic.vert  frag.spv  vert.spv
shaders/axis/: axis.frag  axis.vert
shaders/basic/: basic.frag  basic.vert  frag.spv  geom.spv  vert.spv
shaders/handles/: handles.frag  handles.vert
shaders/lines/: basic.frag  basic.vert  frag.spv  vert.spv
shaders/loaded_image/: loaded.frag  loaded.vert
shaders/thick_lines/: geom.spv  thick_lines.geom  thick_lines.vert  vert.spv
shaders/triangle/: triangle.frag  triangle.vert
src/: BladeForgeBin.cpp  bfBase.cpp  bfBuffer.cpp  bfConsole.cpp  bfCurves2.cpp  bfCurves3.cpp  bfDescriptor.cpp  bfDrawObject.cpp  bfEvent.cpp  bfGUI.cpp  bfHolder.cpp  bfLayerHandler.cpp  bfMain.cpp  bfPhysicalDevice.cpp  bfSwapChain.cpp  bfUniforms.cpp  bfVertex.cpp  bfWindow.cpp  main.cpp
src/base/: bfBase.cpp  bfBuffer.cpp  bfCamera.cpp  bfDescriptor.cpp  bfDescriptor2.cpp  bfHolder.cpp  bfPhysicalDevice.cpp  bfPipeline.cpp  bfSwapChain.cpp  bfWindow.cpp
src/draw/: bfDrawObject.cpp  bfDrawObject2.cpp  bfDrawObjectBuffer.cpp  bfLayerHandler.cpp  bfLayerKiller.cpp
src/geometry/: bfAxis.cpp  bfBladeBody.cpp  bfBladeSection.cpp  bfBladeSection2.cpp  bfCascade.cpp  bfChain.cpp  bfCirclePack.cpp  bfCurves3.cpp  bfCurves3.cpp~  bfCurves3.cpy~  bfCurves3.cpz~  bfCurves3_gui.cpp  bfCurves4.cpp  bfEdge.cpp  bfObjectMath.cpp
src/interaction/: BfGuiCreateWindow.cpp  BfGuiLuaInteraction.cpp  bfConsole.cpp  bfGUI.cpp  bfGui.cpp  bfGuiBody.cpp  bfGuiCamera.cpp  bfGuiCreateWindow.cpp  bfGuiCreateWindowBladeBase.cpp  bfGuiCreateWindowBladeSection.cpp  bfGuiCreateWindowCircleWithHandles.cpp  bfGuiCreateWindowContainer.cpp  bfGuiFileDialog.cpp  bfGuiLuaInteraction.cpp  bfGuiSmartLayerObserverWindow.cpp  bfGuiWindow.cpp
src/other/: BladeForgeBin.cpp  bfConfigManager.cpp  bfMath.cpp  bfMatrix2.cpp  bfTextureLoad.cpp
src/saveas/: bfStep.cpp  bfYaml.cpp
tests/: ImGUItest.cpp  bez_test.cpp  curves.cpp  curves4.cpp  draw_obj_test.cpp  filedialog_test.cpp  main_api.cpp  matrix.cpp  matrix2.cpp  memory_test.cpp  object.cpp  own_api.cpp  sol2_lua_test.cpp  xtensor.cpp
